# okf-llm-wiki

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  vitest.config.ts
.claude/: settings.json  starter-context.json
.claude/agents/: rust-tauri-specialist.md  security-reviewer.md
docs/: architecture.md  roadmap.md
docs/CODEMAPS/: README.md
docs/adr/: ADR-0001-initial-architecture.md
docs/superpowers/plans/: 2026-06-16-m1-trustworthy.md  2026-06-16-okf-llm-wiki-v1.md  2026-06-20-m2-better-ask.md  2026-06-20-m3-real-wiki.md  2026-06-20-m4-edit-delete-pages.md  2026-06-20-m4-red-link-create.md  2026-06-21-digest-self-correction.md  2026-06-21-m4-concept-graph.md  2026-06-21-m4-zero-barrier-ux.md  2026-06-21-openrouter-integration.md  2026-06-22-ask-groundedness.md
docs/superpowers/specs/: 2026-06-16-m1-trustworthy-design.md  2026-06-16-okf-llm-wiki-design.md  2026-06-20-m2-better-ask-design.md  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/core/: ask.rs  clock.rs  config.rs  create.rs  digest.rs  edit.rs  fetch.rs  index_store.rs  links.rs  mod.rs  page.rs  retrieval.rs  settings.rs  slug.rs  store.rs
src-tauri/src/core/embed/: hash.rs  mod.rs  ollama.rs
src-tauri/src/core/provider/: claude.rs  fake.rs  mod.rs  openrouter.rs
src-tauri/tests/: commands_integration.rs
src/lib/: api.test.ts  api.ts  capture.test.ts  capture.ts  graph-model.test.ts  graph-model.ts  modelFilter.test.ts  modelFilter.ts  stores.ts
src/routes/: +layout.svelte  +page.svelte
(+10 files in other folders)
